# opencli-agent

./: README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
agents/: code-review.yaml  dependency-update.yaml  scaffold-feature.yaml
skills/: debug.yaml  explain-code.yaml  refactor.yaml  summarise-pr.yaml  write-tests.yaml
src/: App.module.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  fs.rs  mod.rs  session.rs  shell.rs
src-tauri/src/config/: keychain.rs  loader.rs  mod.rs  schema.rs
src-tauri/src/core/: approval.rs  context.rs  mod.rs  parser.rs  session.rs
src-tauri/src/llm/: factory.rs  mod.rs  normaliser.rs  provider.rs
src-tauri/src/llm/providers/: custom.rs  huggingface.rs  mod.rs  ollama.rs  openrouter.rs
src-tauri/src/plugins/: agent.rs  commands.rs  mod.rs  skill.rs
src-tauri/src/runtime/: audit.rs  diff.rs  fs_executor.rs  mod.rs  shell.rs  undo.rs
src/components/ApprovalDialog/: ApprovalDialog.module.css  index.tsx
src/components/ChatPanel/: ChatPanel.module.css  index.tsx
src/components/DiffViewer/: DiffViewer.module.css  index.tsx
src/components/ModelPicker/: ModelPicker.module.css  index.tsx
src/components/Settings/: Settings.module.css  index.tsx
src/components/SkillsPanel/: SkillsPanel.module.css  index.tsx
src/hooks/: useApproval.ts  useSession.ts  useStream.ts
src/lib/: tauri.ts  types.ts
src/styles/: globals.css
