[package]
name = "opencli-agent"
version = "0.1.0"
description = "OpenCLI Agent - AI coding assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "opencli_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "2"
anyhow = "1"
ignore = "0.4"
notify = "6"
similar = "2"
keyring = "3"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
glob = "0.3"
